# Freeform-Planner

./: .gitignore  FUNCTIONAL_SPEC.md  Oscillator.ffps  Oscillator.net  Oscillator_SMT.ffps  Oscillator_SMT.net  Parts.py  Planner.py  Planner.spec  README.md  Requirements.txt  componentLibrary.py  dasischentest.ffps  fileBrowserBetter.py  fix_obj_uvs.py  footprints.py  helperFunctions.py  loader.py  netlistParser.py  output_test.ffps  parts.py  pyproject.toml  settings.py  test.ffps  test.net  test2.ffps  test2.net  transistor_oscillator.ffps  transistor_oscillator.net
.github/workflows/: ci.yml  release.yml
KiCAD_Example_Project/: Transistor_Blinker.ffps
KiCAD_Example_Project/Transistor_Blinker_Example/: Transistor_Blinker_Example.kicad_prl  Transistor_Blinker_Example.kicad_pro  (+2 more)
KiCAD_Library/: Freeform-Planner-Library.kicad_sym
freeform_planner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: CAP0603.mtl  CAP0805_085.mtl  CAPTHT.mtl  DIODETHT.mtl  DIP8.mtl  LED5MM.mtl  RES0603.mtl  RESTHT.mtl  RESTHT_SHORT.mtl  SOIC8.mtl  SOT23-3.mtl  TO92.mtl
models_sources/: 10pF Ceramic Disc 3.ipt  1743038.ipt  1743038.stp  1N4007.mtl  CAP0603.mtl  CAPTHT.mtl  DIP8.ipt  DIP8.mtl  LED 5mm.ipt  LED5MM_SHORT.mtl  PORT.ipt  Power Diode 1N4001.ipt  RESTHT.mtl  SOIC08 narrow.ipt  SOIC8.mtl  TO92.mtl  TO92_2.STEP  TO92_2.ipt  User Library-CAPC1608X09.ipt  User Library-CAPC1608X09.step  Wire.ipt
tests/: conftest.py  test_components.py  test_footprints.py  test_helperFunctions.py  test_loader.py  test_netlist_parser.py  transistor_oscillator.ffps  transistor_oscillator.net
(+1 files in other folders)
